Fix resume font family & change spacing

--- a/resume.css
+++ b/resume.css
@@ -1,5 +1,5 @@
 body {
-        font-family: 'Optima,Segoe,Segoe UI,Candara,Calibri,Arial,sans-serif', sans-serif;
+        font-family: 'Antic Didone';
         margin-left: 6%;
         margin-right: 6%;
 }
